--- a/EECIP/Views/Dashboard/Projects.cshtml
+++ b/EECIP/Views/Dashboard/Projects.cshtml
@@ -155,7 +155,7 @@
                     }
                 });
 
-                $('#delete-confirm').attr('data-delete-id', (selectedIDs));
+                $('#delete-confirm').attr('data-delete-id', selectedIDs);
             });
         });
     </script>
