--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -77,7 +77,7 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 style="margin-top:0px;">Recent Projects @(Model.LatestProjects[0].TagMatch == true ? "(matching your tag interest)" : "")</h3>
+                        <h3 style="margin-top:0px;">Recent Projects <span style="font-size:75%; color:#6d6d6d">@(Model.LatestProjects[0].TagMatch == true ? "(matching your tag interest)" : "")</span></h3>
 
                         <!--  **************  MOST RECENT PROJECTS **************************************-->
                         <div class="table-responsive">
@@ -97,8 +97,12 @@
                                             <td>
                                                 <a href="@Url.Action("ProjectCard", "Dashboard", new { strid = item.PROJECT_IDX })" class="btn btn-rounded btn-xs btn-eecip"><i class="glyphicon glyphicon-info-sign"></i> Info</a>
                                             </td>
-                                            <td>
+                                            <td >
                                                 @Html.DisplayFor(modelItem => item.PROJ_NAME)
+                                                @if (item.Tag != null)
+                                                {
+                                                <span class="label label-default" style="background-color: #007AFF !important; font-size: 9.35px !important;"> @Html.DisplayFor(modelItem => item.Tag)</span>
+                                                }
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.ORG_NAME)
@@ -116,8 +120,8 @@
                     </div>
                     <div class="col-md-6">
                         <h3 style="margin-top:0px;">
-                            Recent Discussion Topics @(Model.LatestTopics[0].postCount == 999 ? "(matching your tag interest)" : "")
-                        </h3>
+                            Recent Discussion Topics <span style="font-size:75%; color:#6d6d6d">@(Model.LatestTopics[0].postCount == 999 ? "(matching your tag interest)" : "")</span>
+</h3>
 
                         <!--  **************  LATEST DISCUSSIONS **************************************-->
                         @if (Model.LatestTopics != null && Model.LatestTopics.Count > 0)
@@ -139,7 +143,13 @@
                                                         @Html.Raw(item._topic.Name)
                                                     </a>
                                                 </h3>
+
                                                 @Utils.ReturnAmountWordsFromString(Utils.StripHtmlFromString(item._postStart.PostContent), 50)
+                                                @if (item.CategorySlug != null)
+                                                {
+                                                    <span class="label label-default" style="background-color: #007AFF !important; font-size: 9.35px !important;"> @Html.DisplayFor(modelItem => item.CategorySlug)</span>
+                                                }
+
                                                 <p class="topicrowfooterinfo">
                                                     Latest By
                                                     <a href="@Url.Action("UserCard", "Dashboard", new { strid = item._postLatest.Post.MembershipUser_Id })">@item._postLatest.PosterDisplayName</a>
