--- a/EECIP/Views/Dashboard/Search.cshtml
+++ b/EECIP/Views/Dashboard/Search.cshtml
@@ -223,7 +223,7 @@
 
                     <div class="table-responsive">
                         <table class="table table-striped m-b-none" data-ride="datatables">
-                            <thead style="background-color:#fff">
+                            <thead class="thead-inverse" >
                                 <tr>
                                     <th>Type</th>
                                     <th>Agency</th>
