--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -184,7 +184,7 @@
             var FileSize = this.files[0].size / 1024 / 1024;
             if (FileSize > 20) {
                 $('#files').val('');
-                alert('Project files cannot exceed 20 MB');
+                alert('Discussion files cannot exceed 20 MB');
             }
             else {
                 $("#filename1").val($this.val().split('\\').pop());
